force-app/main/default/objects/TransactionS__c/TransactionS__c.object-meta.xml
<CustomObject>
    <label>TransactionS</label>
    <nameField>
        <displayFormat>TID-{000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>