force-app/main/default/objects/TransactionS__c/fields/customerT__c.field-meta.xml
<CustomField>
    <fullName>customerT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>customerT</label>
    <referenceTo>customerT__c</referenceTo>
    <relationshipLabel>Transaction</relationshipLabel>
    <relationshipName>Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>